crates/hwp-core/tests/snapshots/snapshot_tests__shapecontainer_2_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**용지 크기**: 210.00mm x 297.00mm



![이미지]({{SNAPSHOTS_DIR}}/images/shapecontainer-2/BIN0001.jpg)

목  
차
