crates/hwp-core/tests/snapshots/snapshot_tests__shapepict_scaled_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**용지 크기**: 0.00mm x 0.00mm



![이미지]({{SNAPSHOTS_DIR}}/images/shapepict-scaled/BIN0001.jpg)

---


![이미지]({{SNAPSHOTS_DIR}}/images/shapepict-scaled/BIN0001.jpg)
