crates/hwp-core/tests/snapshots/snapshot_tests__shaperect_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<!DOCTYPE html>
<html>
<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">

<head>
  <title></title>
  <meta http-equiv="content-type" content="text/html; charset=utf-8">
  <style>
body {margin:0;padding-left:0;padding-right:0;padding-bottom:0;padding-top:2mm;}
.hce {margin:0;padding:0;position:absolute;overflow:hidden;}
.hme {margin:0;padding:0;position:absolute;}
.hhe {margin:0;padding:0;position:relative;}
.hhi {display:inline-block;margin:0;padding:0;position:relative;background-size:contain;}
.hls {margin:0;padding:0;position:absolute;}
.hfS {margin:0;padding:0;position:absolute;}
.hcD {margin:0;padding:0;position:absolute;}
.hcI {margin:0;padding:0;position:absolute;}
.hcS {margin:0;padding:0;position:absolute;}
.hfN {margin:0;padding:0;position:relative;}
.hmB {margin:0;padding:0;position:absolute;}
.hmO {margin:0;padding:0;position:absolute;}
.hmT {margin:0;padding:0;position:absolute;}
.hpN {display:inline-block;margin:0;padding:0;position:relative;white-space:nowrap;}
.htC {display:inline-block;margin:0;padding:0;position:relative;vertical-align:top;overflow:hidden;}
.haN {display:inline-block;margin:0;padding:0;position:relative;}
.hdu {margin:0;padding:0;position:relative;}
.hdS {margin:0;padding:0;position:absolute;}
.hsC {margin:0;padding:0;position:absolute;}
.hsR {margin:0;padding:0;position:absolute;background-size:100% 100%;}
.hsG {margin:0;padding:0;position:absolute;}
.hsL {margin:0;padding:0;position:absolute;}
.hsT {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsE {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsA {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsP {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsV {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsO {margin:0;padding:0;position:absolute;}
.hsU {margin:0;padding:0;position:absolute;overflow:hidden;}
.hpi {margin:0;padding:0;position:absolute;}
.hch {margin:0;padding:0;position:absolute;}
.hcG {margin:0;padding:0;position:absolute;}
.heq {margin:0;padding:0;position:absolute;}
.heG {margin:0;padding:0;position:absolute;}
.htA {margin:0;padding:0;position:absolute;}
.hvi {margin:0;padding:0;position:absolute;}
.htb {margin:0;padding:0;position:absolute;}
.htG {margin:0;padding:0;position:absolute;}
.hfJ {margin:0;padding:0;position:absolute;}
.hfG {margin:0;padding:0;position:absolute;}
.hfB {margin:0;padding:0;position:absolute;}
.hfR {margin:0;padding:0;position:absolute;}
.hfC {margin:0;padding:0;position:absolute;}
.hfO {margin:0;padding:0;position:absolute;}
.hfL {margin:0;padding:0;position:absolute;}
.hfM {margin:0;padding:0;position:absolute;}
.hfE {margin:0;padding:0;position:absolute;}
.hpl {margin:0;padding:0;position:absolute;}
.hs {margin:0;padding:0;position:absolute;overflow:visible;}
.hpa {position:relative;padding:0;overflow:hidden;margin-left:2mm;margin-right:0mm;margin-bottom:2mm;margin-top:0mm;border:1px black solid;box-shadow:1mm 1mm 0 #AAAAAA;}
.hpa::after {content:'';position:absolute;margin:0;padding:0;left:0;right:0;top:0;bottom:0;background-color:white;z-index:-2;}
.hrt {display:inline-block;margin:0;padding:0;position:relative;white-space:inherit;vertical-align:middle;line-height:1.1;}
.hco {display:inline-block;margin:0;padding:0;position:relative;white-space:inherit;}
.hcc {margin:0;padding:0;position:absolute;}
.hls {clear:both;}
[onclick] {cursor:pointer;}
.cs0 {
  font-size:10pt;color:rgb(0,0,0);font-family:"굴림";
}
.cs1 {
  font-size:10pt;color:rgb(0,0,0);font-family:"바탕";
}
.cs2 {
  font-size:9pt;color:rgb(0,0,0);font-family:"굴림";
}
.cs3 {
  font-size:9pt;color:rgb(0,0,0);font-family:"바탕";letter-spacing:-0.03em;
}
.cs4 {
  font-size:9pt;color:rgb(0,0,0);font-family:"굴림";letter-spacing:-0.03em;
}
.ps0 {
  text-align:justify;
}
.ps1 {
  text-align:justify;
}
.ps2 {
  text-align:justify;
}
.ps3 {
  text-align:justify;
}
.ps4 {
  text-align:justify;
}
.ps5 {
  text-align:justify;
}
.ps6 {
  text-align:justify;
}
.ps7 {
  text-align:justify;
}
.ps8 {
  text-align:justify;
}
.ps9 {
  text-align:justify;
}
.ps10 {
  text-align:justify;
}
.ps11 {
  text-align:justify;
}
.ps12 {
  text-align:justify;
}
@media print {
.hpa {margin:0;border:0 black none;box-shadow:none;}
body {padding:0;}
}
  </style>
</head>


<body>
<div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:30mm;top:35mm;"><div class="hcI"><div class="hls ps1" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:150.00mm;"></div></div></div><div class="hsG" style="top:40.46mm;left:39mm;width:83.84mm;height:29.1mm;"><div class="hsR" style="top:0mm;left:0mm;width:41.98mm;height:29.1mm;"><div class="hsT" style="left:-0.06mm;top:-0.06mm;width:41.98mm;height:29.1mm;"><svg class="hs" viewBox="-0.30 -0.30 42.28 29.4" style="left:-0.15mm;top:-0.15mm;width:42.22mm;height:29.34mm;"><path fill="none" d="M0.06,0.06L41.92,0.06L41.92,29.04L0.06,29.04L0.06,0.06Z " style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path></svg></div></div></div><div class="hsG" style="top:73.55mm;left:39.69mm;width:142.64mm;height:12.29mm;"><div class="hsR" style="top:0mm;left:0mm;width:71.38mm;height:12.29mm;"><div class="hsT" style="left:-0.06mm;top:-0.06mm;width:71.38mm;height:12.29mm;"><svg class="hs" viewBox="-0.30 -0.30 71.68 12.59" style="left:-0.15mm;top:-0.15mm;width:71.62mm;height:12.53mm;"><path fill="none" d="M0.06,0.06L71.32,0.06L71.32,12.23L0.06,12.23L0.06,0.06Z " style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path></svg><div class="hcD" style="left:1.05mm;top:1.05mm;"><div class="hls ps12" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:69.26mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">글 상자</span></div><div class="hls ps12" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:69.26mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">글 상자</span></div></div></div></div></div><div class="hsG" style="top:88.72mm;left:41.28mm;width:69.96mm;height:13.35mm;"><div class="hsR" style="top:0mm;left:0mm;width:35.04mm;height:13.35mm;"><div class="hsT" style="left:-0.06mm;top:-0.06mm;width:35.04mm;height:13.35mm;"><svg class="hs" viewBox="-0.30 -0.30 35.34 13.65" style="left:-0.15mm;top:-0.15mm;width:35.28mm;height:13.59mm;"><path fill="none" d="M0.06,0.06L34.98,0.06L34.98,13.29L0.06,13.29L0.06,0.06Z " style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path></svg></div></div></div><div class="hsG" style="top:106.36mm;left:41.1mm;width:82.68mm;height:21.64mm;"><div class="hsR" style="top:0mm;left:0mm;width:41.4mm;height:21.64mm;"><div class="hsT" style="left:-0.06mm;top:-0.06mm;width:41.4mm;height:21.64mm;"><svg class="hs" viewBox="-0.30 -0.30 41.7 21.94" style="left:-0.15mm;top:-0.15mm;width:41.64mm;height:21.88mm;"><path fill="none" d="M0.06,0.06L41.34,0.06L41.34,21.58L0.06,21.58L0.06,0.06Z " style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path></svg></div></div></div></div></body>

</html>
