crates/hwp-core/tests/snapshots/snapshot_tests__shaperect_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**용지 크기**: 210.00mm x 297.00mm



글 상자  
글 상자  
글 상자  
글 상자
